--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,5 +11,22 @@ services:
       POSTGRES_PASSWORD: password
     ports:
       - '5432:5432'
+    networks:
+      - bookingProjectNetwork
+  bookingproject:
+    image: 'bookingproject:latest'
+    build:
+      context: .
+      dockerfile: Dockerfile
+    container_name: bookingproject
+    ports:
+      - "8080:8080"
+    environment:
+      - spring.datasource.url=jdbc:postgresql://db:5432/booking-project-db
+    depends_on:
+      - db
+    networks:
+      - bookingProjectNetwork
 
-
+networks:
+  bookingProjectNetwork:
