--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,7 +4,7 @@ services:
   db:
     image: postgres:13.1-alpine
     restart: always
-    container_name: booking-project
+    container_name: booking-project-db
     environment:
       POSTGRES_DB: booking-project-db
       POSTGRES_USER: user
